--- a/_posts/2022-07-08-dmp.md
+++ b/_posts/2022-07-08-dmp.md
@@ -1,5 +1,5 @@
 ---
-# title: Data management plan
+title: Data management plan
 # description: |
 #   Our [data management plan](https://en.wikipedia.org/wiki/Data_management_plan) (`v1`) is now available.
   
@@ -8,7 +8,8 @@
 #   [Secondary button](#){:.btn .btn-sm .btn-secondary}
 #   [Dark button](#){:.btn .btn-sm .btn-dark}
 #   [Light button](#){:.btn .btn-sm .btn-light}
-# background: "https://images.unsplash.com/photo-1495841020177-1919ede29bd8?ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+background:
+  img: "assets/theme/images/news3.jpg"
 # author: Philip J. Fry
 # tags: [Data, Shared tag]
 # comments: true
