modify news section

--- a/_posts/2023-11-03-dmp.md
+++ b/_posts/2023-11-03-dmp.md
@@ -1,5 +1,5 @@
 ---
-title: Data management plan
+title: Our website has been launched!
 # description: |
 #   Our [data management plan](https://en.wikipedia.org/wiki/Data_management_plan) (`v1`) is now available.
   
@@ -15,4 +15,4 @@ background:
 # comments: true
 ---
 
-our latest paper is published.
+DONUTS website is ready now!
